<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleCalc2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="student_id">AND23907</string>
    <string name="number0">0</string>
    <string name="number1">1</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number4">4</string>
    <string name="number5">5</string>
    <string name="number6">6</string>
    <string name="number7">7</string>
    <string name="number8">8</string>
    <string name="number9">9</string>
    <string name="dot">.</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="equal">=</string>
    <string name="neg">+/-</string>
    <string name="clear">C</string>
    <string name="madd">m+</string>
    <string name="msub">m-</string>
    <string name="mrecall">mr</string>
    <string name="mclear">mc</string>
    
</resources>
